--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   padding: 0 2rem;
 }
 
@@ -126,4 +126,29 @@
   .logo img {
     filter: invert(1);
   }
+} */
+
+.container {
+  text-align: center;
+  padding-top: 10rem;
+  color: #445566;
+}
+
+.header {
+  font-size: 3rem;
+}
+
+.subtitle {
+  margin-bottom: 2rem;
+}
+
+.blog-list {
+  text-align: start;
+  margin: auto;
+  width: max-content;
+}
+
+.blog-list a {
+  color: rgb(4, 165, 165);
+  text-decoration: underline;
 }
